--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,9 +102,9 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/SandWorld
-MRUItem1=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem2=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/SandWorld
+MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
 MRUItem3=/Game/FirstPersonBP/Maps/VerticalSlice_Level1
 
 [/Script/UnrealEd.PersonaOptions]
@@ -275,10 +275,10 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/SandWorld
+LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1409,28 +1409,31 @@ LandscapeGizmoActiveActor.Actor=True
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
-MRUItem1=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
-MRUItem2=/Game/FirstPersonBP/Maps/SandWorld
-MRUItem3=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
-MRUItem4=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
-MRUItem5=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
-MRUItem6=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
-MRUItem7=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
-MRUItem8=/Game/StarterContent/Props/Materials/M_Rock1_Inst
-MRUItem9=/Game/StarterContent/Props/Materials/M_Rock1
-MRUItem10=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
-MRUItem11=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
-MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
-MRUItem13=/Game/Materials/Mirror1
-MRUItem14=/Game/Materials/Blank_Mat
-MRUItem15=/Game/Meshes/Crystal_neural_node/Prism_Mesh
-MRUItem16=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
-MRUItem17=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
-MRUItem18=/Game/Materials/TetherGlow_Mat_Inst3
-MRUItem19=/Game/StarterContent/Props/SM_Rock
+MRUItem0=/Game/Meshes/Tomb_Tomb_LOD
+MRUItem1=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
+MRUItem2=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
+MRUItem3=/Game/FirstPersonBP/Maps/SandWorld
+MRUItem4=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem5=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
+MRUItem6=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
+MRUItem7=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
+MRUItem8=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem9=/Game/StarterContent/Props/Materials/M_Rock1_Inst
+MRUItem10=/Game/StarterContent/Props/Materials/M_Rock1
+MRUItem11=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
+MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
+MRUItem13=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
+MRUItem14=/Game/Materials/Mirror1
+MRUItem15=/Game/Materials/Blank_Mat
+MRUItem16=/Game/Meshes/Crystal_neural_node/Prism_Mesh
+MRUItem17=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
+MRUItem18=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
+MRUItem19=/Game/Materials/TetherGlow_Mat_Inst3
 
 [PlacementMode]
+RecentlyPlaced=/Game/Meshes/Tomb_TombLid_LOD.Tomb_TombLid_LOD;
+RecentlyPlaced=/Game/Meshes/Tomb_Tomb_LOD.Tomb_Tomb_LOD;
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst.Sand_Material_Inst;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
@@ -1448,9 +1451,6 @@ RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFact
 RecentlyPlaced=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP.ProgressMirror_BP;
 RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1.M_Rock1;
 RecentlyPlaced=/Game/Materials/LightBeamMaterial/LightGlow_Mat_Inst2.LightGlow_Mat_Inst2;
-RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Materials/Mirror1.Mirror1;
-RecentlyPlaced=/Game/Materials/Mirror.Mirror;
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -1618,6 +1618,7 @@ LargeObject_BP_C=
 /Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1.SludgeCorruptedArea_Particle1=1
 /Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst.Sand_Material_Inst=1
 /Game/FirstPersonBP/Blueprints/SandFX/Sand_Material.Sand_Material=1
+/Game/Meshes/Tomb_Tomb_LOD.Tomb_Tomb_LOD=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="PhysicsAssetEditor",Commands=)
@@ -1685,7 +1686,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/FirstPersonBP/Maps
+UNR=D:/Projects/Enigmatic Studios/Mourning Mirrors/MourningMirrorsPrototype/MM_Prototype/Content/FirstPersonBP/Maps
 BRUSH=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
 FBX=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
 FBXAnim=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
@@ -2404,9 +2405,10 @@ StaticMeshComponent.Physics=True
 Brush.BrushSettings=True
 BlockingVolume.Cooking=False
 Brush.Geometry=True
+StaticMeshActor.StaticMesh=True
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -2460,6 +2462,8 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
+bImportMaterials=False
+bImportTextures=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -2551,5 +2555,20 @@ MirrorOp=0
 NewLandscapeMaterialName=
 ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
