--- a/MM_Prototype/Saved/Config/Windows/Engine.ini
+++ b/MM_Prototype/Saved/Config/Windows/Engine.ini
@@ -48,4 +48,12 @@ bUpdateOnRT=True
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
 
