--- a/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/MM_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,8 +102,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 SnapScaleEnabled=False
 
 [MRU]
-MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
-MRUItem1=/Game/FirstPersonBP/Maps/SandWorld
+MRUItem0=/Game/FirstPersonBP/Maps/SandWorld
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
 MRUItem3=/Game/FirstPersonBP/Maps/VerticalSlice_Level1
 
@@ -230,10 +230,9 @@ ProgressMirror_BP_C=PostProcessVolume.Lens.Lens,
 IntProperty=PostProcessVolume.Lens.Lens,
 ArrayProperty=PostProcessVolume.Lens.Lens,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
-StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,StaticMesh.LOD1.MeshBuildSettings,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Meshes/Columns
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.812500
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -276,7 +275,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+LastLevel=/Game/FirstPersonBP/Maps/SandWorld
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1405,85 +1404,58 @@ LandscapeGizmoActiveActor.Gizmo=True
 LandscapeGizmoActiveActor.Rendering=True
 LandscapeGizmoActiveActor.Input=True
 LandscapeGizmoActiveActor.Actor=True
-AssetViewerSettings.Settings=True
-AssetViewerSettings.Color Grading=True
-AssetViewerSettings.Lens=True
-AssetViewerSettings.Rendering Features=True
-FbxSceneImportOptions.ImportOptions=True
-FbxSceneImportOptions.Meshes=True
-FbxSceneImportOptions.Texture=True
-FbxSceneImportOptionsStaticMesh.StaticMesh=True
-FbxSceneImportOptionsSkeletalMesh.SkeletalMesh=True
-FbxSceneImportOptionsSkeletalMesh.Animation=True
-FbxScene_Tomb_C.TransformCommon=True
-FbxScene_Tomb_C.Rendering=True
-FbxScene_Tomb_C.Input=True
-FbxScene_Tomb_C.Actor=True
-FbxScene_Tomb_C.Tick=True
-FbxScene_Tomb_C.Replication=True
-Tomb_C.Tick=True
-Tomb_C.Rendering=True
-Tomb_C.Replication=True
-Tomb_C.Input=True
-Tomb_C.Actor=True
-Tomb_C.TransformCommon=True
-StaticMesh.LOD1=True
-StaticMesh.LOD2=True
-StaticMesh.LOD3=True
-StaticMesh.Thumbnail=False
-StaticMeshActor.HLOD=False
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Meshes/Columns/SM_ColumnSpiralSegment_ColumnSpiralSegment
-MRUItem1=/Game/Meshes/Columns/SM_ColumnQumranBase_ColumnQumranBase
-MRUItem2=/Game/Meshes/Columns/test_ColumnQumranBase_LOD1
-MRUItem3=/Game/Meshes/Columns/test_ColumnQumranBase_LOD0
-MRUItem4=/Game/Meshes/Columns/ColumnTigerSegment_ColumnTigerSegment_LOD0
-MRUItem5=/Game/Meshes/ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD0
-MRUItem6=/Game/Meshes/ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD1
-MRUItem7=/Game/Meshes/ColumnSpiralSegment_LOD0_ColumnSpiralSegment_LOD0
-MRUItem8=/Game/Meshes/large_urn_2_Cylinder_001
-MRUItem9=/Game/Meshes/large_urn_1_Cylinder_000
-MRUItem10=/Game/Meshes/TombLid_TombLid_LOD
-MRUItem11=/Game/Blueprints/Tomb
-MRUItem12=/Game/Meshes/Tomb_Tomb_LOD
-MRUItem13=/Game/Meshes/FbxScene_Tomb
-MRUItem14=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
-MRUItem15=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
-MRUItem16=/Game/FirstPersonBP/Maps/SandWorld
-MRUItem17=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
-MRUItem18=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
-MRUItem19=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
+MRUItem0=/Game/FirstPersonBP/Maps/SandWorld
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem2=/Game/FirstPersonBP/Maps/VerticalSlice_Level_1
+MRUItem3=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst
+MRUItem4=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material
+MRUItem5=/Game/FirstPersonBP/Blueprints/JasonHiscock_BP
+MRUItem6=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP
+MRUItem7=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1
+MRUItem8=/Game/FirstPersonBP/Blueprints/CorruptAreas/Sludge_BP
+MRUItem9=/Game/StarterContent/Props/Materials/M_Rock1_Inst
+MRUItem10=/Game/StarterContent/Props/Materials/M_Rock1
+MRUItem11=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/LightBeam_BP
+MRUItem12=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/KeyJem_BP
+MRUItem13=/Game/FirstPersonBP/Blueprints/MirrorPuzzle/PrismObject_BP
+MRUItem14=/Game/Materials/Mirror1
+MRUItem15=/Game/Materials/Blank_Mat
+MRUItem16=/Game/Meshes/Crystal_neural_node/Prism_Mesh
+MRUItem17=/Game/Meshes/Crystal_neural_node/crystal_neural_node1
+MRUItem18=/Game/Meshes/Crystal_neural_node/crystal_neural_node2
+MRUItem19=/Game/Materials/TetherGlow_Mat_Inst3
 
 [PlacementMode]
-RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnQumranTop_ColumnQumranTop.SM_ColumnQumranTop_ColumnQumranTop;
-RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnNuhasSegment_ColumnNuhasSegment.SM_ColumnNuhasSegment_ColumnNuhasSegment;
 RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnSpiralBase_ColumnSpiralBase.SM_ColumnSpiralBase_ColumnSpiralBase;
-RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnSpiralSegment_ColumnSpiralSegment.SM_ColumnSpiralSegment_ColumnSpiralSegment;
-RecentlyPlaced=/Game/Meshes/ColumnSmoothSegment_LOD0_ColumnSmoothSegment_LOD0.ColumnSmoothSegment_LOD0_ColumnSmoothSegment_LOD0;
-RecentlyPlaced=/Game/Meshes/ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD2.ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD2;
-RecentlyPlaced=/Game/Meshes/ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD0.ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD0;
-RecentlyPlaced=/Game/Meshes/ColumnNuhasBase_LOD0_ColumnNuhasBase_LOD0.ColumnNuhasBase_LOD0_ColumnNuhasBase_LOD0;
-RecentlyPlaced=/Game/Meshes/Tomb_LOD0_Tomb_LOD0.Tomb_LOD0_Tomb_LOD0;
-RecentlyPlaced=/Game/Meshes/TombLid_LOD0_TombLid_LOD0.TombLid_LOD0_TombLid_LOD0;
-RecentlyPlaced=/Game/Meshes/Tomb_Tomb_LOD.Tomb_Tomb_LOD;
-RecentlyPlaced=/Game/Meshes/UrnLarge01.UrnLarge01;
-RecentlyPlaced=/Game/Meshes/UrnLarge02.UrnLarge02;
-RecentlyPlaced=/Game/Blueprints/Tomb.Tomb;
-RecentlyPlaced=/Game/Meshes/TombLid_TombLid_LOD.TombLid_TombLid_LOD;
-RecentlyPlaced=/Game/Meshes/Tomb_TombLid_LOD.Tomb_TombLid_LOD;
-RecentlyPlaced=/Game/Meshes/Cube_001.Cube_001;
-RecentlyPlaced=/Game/Meshes/Cube.Cube;
-RecentlyPlaced=/Game/Meshes/FbxScene_Tomb.FbxScene_Tomb;
-RecentlyPlaced=/Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst.Sand_Material_Inst;
+RecentlyPlaced=/Game/Meshes/Columns/SM_ColumnSmoothSegment_ColumnSmoothSegment.SM_ColumnSmoothSegment_ColumnSmoothSegment;
+RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
+RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmosphericFog_0
+RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/LargeObject_BP.LargeObject_BP;
+RecentlyPlaced=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1.SludgeCorruptedArea_Particle1;
+RecentlyPlaced=/Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle.SludgeCorruptedArea_Particle;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Particles/P_Steam_Lit.P_Steam_Lit;
+RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1_Inst.M_Rock1_Inst;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/ProgressMirror_BP.ProgressMirror_BP;
+RecentlyPlaced=/Game/StarterContent/Props/Materials/M_Rock1.M_Rock1;
+RecentlyPlaced=/Game/Materials/LightBeamMaterial/LightGlow_Mat_Inst2.LightGlow_Mat_Inst2;
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
-Object="\"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+Object=
 StaticMeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" "
@@ -1518,7 +1490,7 @@ ParticleModuleRotation="\"Object.Rotation.StartRotation\" \"Object.Rotation.Star
 ParticleModuleRotationBase="\"Object.Rotation.StartRotation\" \"Object.Rotation.StartRotation.Distribution\" "
 ParticleModuleRotationRate="\"Object.Rotation.StartRotationRate\" \"Object.Rotation.StartRotationRate.Distribution\" "
 ParticleModuleRotationRateBase="\"Object.Rotation.StartRotationRate\" \"Object.Rotation.StartRotationRate.Distribution\" "
-StaticMesh="\"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
+StaticMesh=
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
@@ -1646,13 +1618,6 @@ LargeObject_BP_C=
 /Game/Materials/CorruptedArea/SludgeCorruptedArea_Particle1.SludgeCorruptedArea_Particle1=1
 /Game/FirstPersonBP/Blueprints/SandFX/Sand_Material_Inst.Sand_Material_Inst=1
 /Game/FirstPersonBP/Blueprints/SandFX/Sand_Material.Sand_Material=1
-/Game/Meshes/Tomb_Tomb_LOD.Tomb_Tomb_LOD=1
-/Game/Meshes/TombLid_TombLid_LOD.TombLid_TombLid_LOD=1
-/Game/Meshes/large_urn_1_Cylinder_000.large_urn_1_Cylinder_000=1
-/Game/Meshes/ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD0.ColumnTigerSegment_LOD0_ColumnTigerSegment_LOD0=1
-/Game/Meshes/Columns/ColumnTigerSegment_ColumnTigerSegment_LOD0.ColumnTigerSegment_ColumnTigerSegment_LOD0=1
-/Game/Meshes/Columns/test_ColumnQumranBase_LOD1.test_ColumnQumranBase_LOD1=1
-/Game/Meshes/Columns/SM_ColumnQumranBase_ColumnQumranBase.SM_ColumnQumranBase_ColumnQumranBase=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="PhysicsAssetEditor",Commands=)
@@ -1722,7 +1687,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=D:/Projects/Enigmatic Studios/Mourning Mirrors/MourningMirrorsPrototype/MM_Prototype/Content/FirstPersonBP/Maps
 BRUSH=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
-FBX=D:/Projects/Enigmatic Studios/Mourning Mirrors/MourningMirrorsPrototype/MM_Prototype/Content/Meshes/Columns
+FBX=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
 FBXAnim=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
 GenericImport=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
 GenericExport=../../../../../GitHub/EnigmaticStudios-MourningMirrorsPrototype/MM_Prototype/Content/
@@ -2439,15 +2404,9 @@ StaticMeshComponent.Physics=True
 Brush.BrushSettings=True
 BlockingVolume.Cooking=False
 Brush.Geometry=True
-StaticMeshActor.StaticMesh=True
-FbxImportUI.Miscellaneous=False
-FbxImportUI.LodSettings=False
-FbxImportUI.Material=False
-FbxImportUI.Mesh=True
-StaticMesh.LODCustomMode=True
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
@@ -2501,29 +2460,26 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
-bImportMaterials=False
-bImportTextures=False
-bOverrideFullName=False
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
 VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
-bGenerateLightmapUVs=False
+bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
 bAutoGenerateCollision=True
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
-bImportMeshLODs=True
-NormalImportMethod=FBXNIM_ImportNormalsAndTangents
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
 NormalGenerationMethod=MikkTSpace
 ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
 ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
 ImportUniformScale=1.000000
 bConvertScene=True
-bForceFrontXAxis=True
-bConvertSceneUnit=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
 [FBX_Import_UI_Option_FbxSkeletalMeshImportData]
 bUseT0AsRefPose=False
@@ -2607,45 +2563,8 @@ bAutoCreateAssets=True
 bAutoDeleteAssets=True
 bDetectChangesOnStartup=True
 bPromptBeforeAutoImporting=True
-bDeleteSourceFilesWithAssets=True
+bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
-
-[/Script/UnrealEd.FbxSceneImportOptions]
-bCreateContentFolderHierarchy=False
-bImportAsDynamic=False
-HierarchyType=FBXSOCHT_CreateBlueprint
-bForceFrontXAxis=False
-bBakePivotInVertex=False
-bImportStaticMeshLODs=False
-bImportSkeletalMeshLODs=False
-bInvertNormalMaps=False
-
-[/Script/UnrealEd.FbxSceneImportOptionsStaticMesh]
-bAutoGenerateCollision=True
-VertexColorImportOption=Replace
-VertexOverrideColor=(B=255,G=255,R=255,A=255)
-bRemoveDegenerates=True
-bBuildAdjacencyBuffer=True
-bBuildReversedIndexBuffer=True
-bGenerateLightmapUVs=True
-bOneConvexHullPerUCX=True
-NormalImportMethod=FBXSceneNIM_ComputeNormals
-NormalGenerationMethod=MikkTSpace
-
-[/Script/UnrealEd.FbxSceneImportOptionsSkeletalMesh]
-bCreatePhysicsAsset=False
-bPreserveSmoothingGroups=False
-bImportMeshesInBoneHierarchy=True
-bImportMorphTargets=False
-ThresholdPosition=0.000020
-ThresholdTangentNormal=0.000020
-ThresholdUV=0.000977
-bImportAnimations=True
-AnimationLength=FBXALIT_ExportedTime
-bUseDefaultSampleRate=False
-bImportCustomAttribute=True
-bPreserveLocalTransform=False
-bDeleteExistingMorphTargetCurves=False
 
 
